# cryptobot_algo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  diff.txt  find_all_h.txt  good code for example 30  includes.h
.githooks/: pre-commit
.github/workflows/: metrics.yml  single_platform.yml  single_platform_fedora.yml  single_platform_ubuntu.yaml
aoe/: aoe.h
aoe/api/: exchange_api.h  i_exchange_api.h
aoe/credentials/: i_credentials.h
aoe/credentials_loader/: i_credentials_loader.h
aoe/exchange/: enums.h
aoe/ping_manager/: i_ping_manager.h
aoe/response_queue_listener/: i_response_queue_listener.h  response_queue_listener.h
aoe/rest_request_sender/: i_rest_request_sender.h
aoe/subscription_builder/: i_subscription_builder.h
aos/: aos.h
aos/avg_tracker/: avg_tracker.h  i_avg_tracker.h
aos/bbo_full/: bbo_full.h
aos/best_ask/: best_ask.h
aos/best_bid/: best_bid.h
aos/common/: category_market.h  common.h  exchange_id.h  i_waitable.h  mem_pool.h  multi_pool.h  network_environment.h  ref_counted.h  types.h
aos/deviation_tracker/: deviation_tracker.h  i_deviation_tracker.h
aos/exchange/: i_exchange.h
aos/exchange_registry/: exchange_registry.h  i_exchange_registry.h
aos/executer_provider/: executor_provider.h  i_executor_provider.h
aos/executor_strategy/: executor_strategy.h  i_executor_strategy.h
aos/exit_waiter/: i_exit_waiter.h
aos/hash_utils/: decompose_hash.h
aos/histogram/: histogram_calculator.h  i_histogram_calculator.h
aos/joint_histogram/: i_joint_histogram_calculator.h  joint_histogram_calculator.h
aos/logger/: logger.h  mylog.h
aos/market_triplet_manager/: i_market_triplet_manager.h  market_triplet_manager.h
aos/market_type/: market_type.h
aos/max_tracker/: i_max_tracker.h  max_tracker.h
aos/min_tracker/: i_min_tracker.h  min_tracker.h
aos/multi_order_manager/: i_multi_order_manager.h  multi_order_manager.h
aos/mutual_information/: c_mutual_information_calculator.h  i_mutual_information_calculator.h  mutual_information_calculator.h
aos/mutual_information_real_time/: mutual_information_real_time.h
aos/om/: i_om.h  om.h
aos/order_book/: i_order_book.h  order_book.h
aos/order_book_diff/: i_order_book_diff.h
aos/order_book_event/: i_order_book_event.h
aos/order_book_level/: order_book_level.h
aos/order_book_level_raw/: order_book_level_raw.h
aos/order_book_notifier_flags/: flags.h
aos/order_book_snapshot/: i_order_book_snapshot.h
aos/order_book_subscriber/: i_order_book_subscriber.h  (+1 more)
cmake/: BuildLibsodium.cmake
examples/: CMakeLists.txt  dsc.md  main.cpp
examples/example10/: CMakeLists.txt  main.cpp
examples/example11/: CMakeLists.txt  main.cpp
examples/example12/: CMakeLists.txt  main.cpp
examples/example13/: CMakeLists.txt  main.cpp
examples/example14/: CMakeLists.txt  main.cpp
examples/example15/: CMakeLists.txt  main.cpp
examples/example15_empty/: CMakeLists.txt  main.cpp
examples/example16/: CMakeLists.txt  main.cpp
examples/example16_empty/: CMakeLists.txt  main.cpp
examples/example17/: CMakeLists.txt  main.cpp
examples/example17_empty/: CMakeLists.txt  main.cpp
examples/example18/: CMakeLists.txt  main.cpp
examples/example19/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example20/: CMakeLists.txt  main.cpp
examples/example21/: CMakeLists.txt  main.cpp
examples/example22/: CMakeLists.txt  main.cpp
examples/example23/: CMakeLists.txt  main.cpp
examples/example24/: CMakeLists.txt  main.cpp
examples/example25/: CMakeLists.txt  main.cpp
examples/example26/: CMakeLists.txt  main.cpp
examples/example27/: CMakeLists.txt  main.cpp
examples/example28/: CMakeLists.txt  main.cpp
examples/example29/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example30/: CMakeLists.txt  main.cpp
examples/example31/: CMakeLists.txt  main.cpp
examples/example32/: CMakeLists.txt  main.cpp
examples/example33/: CMakeLists.txt  main.cpp
examples/example34/: CMakeLists.txt  main.cpp
examples/example35/: CMakeLists.txt  main.cpp
examples/example36/: CMakeLists.txt  main.cpp
examples/example36_1/: CMakeLists.txt  main.cpp
examples/example37/: CMakeLists.txt  main.cpp
examples/example38/: CMakeLists.txt  main.cpp
examples/example39/: CMakeLists.txt  main.cpp
examples/example3_empty/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/example40/: CMakeLists.txt  main.cpp
examples/example41/: CMakeLists.txt  main.cpp
examples/example42/: CMakeLists.txt  main.cpp
examples/example43/: CMakeLists.txt  main.cpp
examples/example44/: CMakeLists.txt  main.cpp
examples/example44 copy/: CMakeLists.txt  main.cpp
examples/example45/: CMakeLists.txt  main.cpp
examples/example46/: CMakeLists.txt  main.cpp
examples/example47/: CMakeLists.txt  main.cpp
examples/example5/: CMakeLists.txt  main.cpp
examples/example5_empty/: CMakeLists.txt
examples/example6/: CMakeLists.txt  main.cpp
examples/example7/: CMakeLists.txt  main.cpp
examples/example8/: CMakeLists.txt  main.cpp
examples/example9/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/perfomance/common/: CMakeLists.txt  main.cpp
tests/perfomance/hash_and_unhash/: CMakeLists.txt  main.cpp
tests/perfomance/order_book/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  binance_execution_event_parser.cc  binance_order_event_parser.cc  bybit_cancel_order_request_maker.cc  bybit_execution_event_parser.cc  bybit_min_qty_calculator.cc  bybit_order_book_event_parser.cc  bybit_order_storage.cc  bybit_place_order_request_maker copy.cc  bybit_place_order_request_maker.cc  bybit_spot_buy_limit_order.cc  converter_trading_pair_to_big_string_view.cc  ed25519_signer.cc  executor_provider.cc  hedge_position_storage_by_pair.cc  hedge_position_strategy.cc  hedge_position_strategy_default.cc  net_position_storage_by_pair.cc  net_position_storage_by_pair_use_external_event_bybit.cc  net_position_strategy.cc  net_position_strategy_default.cc  order_book.cc
(+255 files in other folders)
