add_subdirectory(example3)
add_subdirectory(example2)
add_subdirectory(example4)
add_subdirectory(example5)
add_subdirectory(example6)
add_subdirectory(example8)
add_subdirectory(example9)
add_subdirectory(example11)
add_subdirectory(example12)
add_subdirectory(example13)
add_subdirectory(example14)
add_subdirectory(example15)
add_subdirectory(example16)
add_subdirectory(example17)
add_subdirectory(example18)
add_subdirectory(example19)
add_subdirectory(example20)
add_subdirectory(example21)
add_subdirectory(example22)
add_subdirectory(example23)
add_subdirectory(example24)