add_subdirectory(example3_empty)
add_subdirectory(example2)
add_subdirectory(example4)
add_subdirectory(example5_empty)
add_subdirectory(example6)
add_subdirectory(example9)
add_subdirectory(example11)
add_subdirectory(example12)
add_subdirectory(example13)
add_subdirectory(example14)
add_subdirectory(example15_empty)
add_subdirectory(example16_empty)
add_subdirectory(example17_empty)
add_subdirectory(example18)
add_subdirectory(example19)
add_subdirectory(example20)
add_subdirectory(example21)
add_subdirectory(example22)
add_subdirectory(example23)
add_subdirectory(example24)
add_subdirectory(example25)
add_subdirectory(example26)
add_subdirectory(example27)
add_subdirectory(example28)
add_subdirectory(example29)
add_subdirectory(example30)
add_subdirectory(example31)
add_subdirectory(example32)
add_subdirectory(example33)
add_subdirectory(example34)
add_subdirectory(example35)
add_subdirectory(example36)
add_subdirectory(example37)
add_subdirectory(example38)
add_subdirectory(example39)
add_subdirectory(example40)
add_subdirectory(example41)
add_subdirectory(example42)